# Guida

./: LICENSE  README.md  package-lock.json  security_design_plan.md
.github/workflows/: deploy-data.yml  deploy-web.yml  release.yml
guida-client/: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  index.html  package-lock.json  package.json  phase2_dev_plan.md  tailwind.config.ts  vite.config.ts  vitest.config.ts
guida-client/matching-core/: .gitignore  AUTHORING.md  Cargo.toml  MPRE_REPORT.md  matching_config.sample.json  near_collisions.json
guida-client/matching-core/regression/: .gitignore  README.md  manifest.example.json
guida-client/matching-core/src/: anchor.rs  authoring.rs  config.rs  geometry.rs  hash.rs  identify.rs  lib.rs  normalize.rs  regression.rs  screen.rs
guida-client/matching-core/tests/: anchor.rs  config.rs  distortion.rs  regression.rs  screen.rs
guida-client/public/data/: dependencies.json  game_data.json  gifts.json  packs.json  patch_version.json  prisoners.json
guida-client/scripts/: bump-version.js  decode-deck.mjs  extract-changelog.js
guida-client/src/: App.tsx  index.css  vite-env.d.ts
guida-client/src-tauri/: Cargo.toml  tauri.conf.json
guida-client/src-tauri/capabilities/: default.json
guida-client/src-tauri/icons/: icon.icns
guida-client/src-tauri/src/: lib.rs  main.rs
guida-client/src-tauri/src/capture/: frame.rs  hwnd.rs  mod.rs  wgc.rs
guida-client/src-tauri/src/commands/: capture.rs  crypto.rs  fs.rs  image_cache.rs  mod.rs  settings.rs
guida-client/src-tauri/src/utils/: uuid.rs
guida-client/src/api/: appUpdate.ts  client.ts  gameData.ts  httpServer.ts  imageCache.test.ts  imageCache.ts  manifestSync.ts  mockServer.ts  routes.ts  sync.offline.test.ts
guida-client/src/components/common/: FirstRunNotice.tsx  GiftImageOverlay.tsx  ImageWithFallback.tsx  PageHeader.tsx  PatchBadge.tsx  PatchNotesModal.tsx  ServerUnavailableNotice.tsx  UpdateGate.tsx
guida-client/src/components/overlay/: GuideHighlight.tsx  OverlayWindow.tsx
guida-client/src/components/route/: GiftPickerPanel.tsx  RouteCard.tsx  RouteEditor.tsx  RouteFilter.tsx
guida-client/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  select.tsx  toast.tsx
guida-client/src/data/: seedRoutes.ts
guida-client/src/hooks/: useImageCache.ts  useRouteFilter.ts  useTauriCommand.ts
guida-client/src/lib/: deckCode.ts  env.ts  logger.ts  storage.ts  utils.ts  version.ts
guida-client/src/pages/: BackupScreen.tsx  BaseScreen.tsx  Dashboard.tsx  Guide.tsx  MyRoutes.tsx  PlayScreen.tsx  RouteHub.tsx  Settings.tsx  UserProfile.tsx
guida-client/src/store/: appStore.sync.test.ts  appStore.ts  guideStore.ts  playStore.ts  routeStore.ts
guida-client/src/types/: filter.ts  gameData.ts  manifest.ts  route.ts  settings.ts
guida-server/: .env.example  .gitignore  docker-compose.yml
guida-server/data/: .gitignore  dungeon_meta.json  game_data.json  gifts.json  manifest.json  packs.json  patch_version.json
guida-server/db/: init.sql
guida-server/nginx/: nginx.conf
guida-server/scripts/: generate-manifest.mjs
guida-server/server/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
guida-server/server/src/: index.ts
guida-server/server/src/db/: schema.sql
guida-server/server/src/plugins/: db.ts  rateLimit.ts
guida-server/server/src/routes/: gameData.ts  health.ts  inquiries.ts  routes.ts
guida-server/server/src/types/: index.ts
guida-server/worker/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
guida-server/worker/scripts/: migrate.ts
guida-server/worker/src/: crypto.ts  data.ts  db.ts  domain.ts  index.ts  json.d.ts  ratelimit.ts  types.ts
guida-server/worker/src/routes/: gameData.ts  health.ts  inquiries.ts  routeHub.ts
guida-web/: index.html  package-lock.json  package.json  vite.config.ts
guida-web/src/: App.css  App.tsx  index.css
