[package]
name = "guida"
version = "0.3.3"
description = "림버스 컴퍼니 거울 던전 가이드 및 루트 공유 데스크톱 앱"
authors = ["Guida Contributors"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "guida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# 디바이스 UUID를 OS 보호 저장소(Windows 자격 증명 관리자 = DPAPI 암호화)에
# 보관해 평문 파일 변조를 무력화한다. Windows 외 플랫폼은 백엔드 부재 시
# 파일-서명 폴백으로 동작한다(웹/타 플랫폼은 테스트용).
keyring = { version = "3", features = ["windows-native"] }
aes-gcm = "0.10.3"
sha2 = "0.10.8"
# 백업 키 파생 KDF.
#  - v3(현행): 메모리-하드 Argon2id 로 GPU/ASIC 병렬 오프라인 브루트포스 내성을 높인다.
#  - v2(레거시 복호화): PBKDF2-HMAC-SHA256 600k. v2 블롭 복원 호환을 위해 유지.
# 솔트는 백업마다 랜덤 생성해 블롭 헤더에 포함한다.
argon2 = "0.5"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
base64 = "0.22.1"

# 앱 자동 업데이트: 서명된 설치 파일을 받아 검증 후 설치하고(updater),
# 설치 직후 앱을 재시작한다(process). 데스크톱 전용 플러그인이며 이 앱은
# Windows(nsis) 타깃이라 별도 타깃 게이팅 없이 추가한다.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
